Colaboratory を使用して作成しました

--- a/chartmath201complex.ipynb
+++ b/chartmath201complex.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath201complex.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMCGF0X31wdPgOBss9d22bp",
+      "authorship_tag": "ABX9TyP8F5sBmPh0lHMKcOg/vWH3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,6 @@
         "\n",
         "数学を Colab で学ぶ、というチャレンジ。\n",
         "\n",
-        "ファイル名を chartmath2b01complex.ipynb とかする。たまたま手元にあった青チャートの数学ⅡBの第1章が複素数から始まっている。自分の持っているチャート式はブックオフで買っているので、色も黄色と青が混ざっているし、発売年度もバラバラ。まあその辺はいいか。こだわらない。\n",
         "\n",
         "\n"
       ]
@@ -46,7 +45,7 @@
         "id": "Lp6YsK1tHRr4"
       },
       "source": [
-        "# 第1章 複素数と方程式"
+        "# 複素数と方程式"
       ]
     },
     {
@@ -55,9 +54,9 @@
         "id": "a6XEjJs3GAJA"
       },
       "source": [
-        "2次方程式 $ax^2+bx+c=0$ の解については、数学Ⅰにおいて、2次関数 $y=ax^2+bx+c$ のグラフと $x$ 軸との共有点(交点・接点)の $x$ 座標として扱った。したがって、$b^2-4ac<0$ のとき(判別式が負のとき)は共有点がないことから、「解はない」とした。\n",
+        "2次方程式 $ax^2+bx+c=0$ の解については、数学Ⅰにおいて、2次関数 $y=ax^2+bx+c$ のグラフと $x$ 軸との共有点(交点・接点) の $x$ 座標として扱った。したがって、$b^2-4ac<0$ のとき (判別式が負のとき) は共有点がないことから、「解はない」とした。\n",
         "\n",
-        "この章では、この場合も解があるように、新しい数 $i$ を考え、数の範囲を複素数(実数・虚数)にまで広げる。そして、3次以上の方程式(高次方程式)についても考える。\n",
+        "この章では、この場合も解があるように、新しい数 $i$ を考え、数の範囲を複素数 (実数・虚数) にまで広げる。そして、3次以上の方程式(高次方程式)についても考える。\n",
         "\n",
         "キーワード: 複素数、2次方程式の解、解と係数の関係、因数定理、高次方程式。"
       ]
@@ -68,7 +67,7 @@
         "id": "vpZT4iaEq-q1"
       },
       "source": [
-        "## 1.1 複素数"
+        "# 複素数"
       ]
     },
     {
@@ -79,14 +78,18 @@
       "source": [
         "$a, b, c, d$ は実数、$\\alpha, \\beta$は複素数とする。\n",
         "\n",
+        "1. 虚数単位 $i$ は $i^2= -1$ を満たす 1つの数。 $a > 0$ のとき、$\\sqrt{-a}=\\sqrt{a} i$ 特に $\\sqrt{-1} = i$.\n",
         "\n",
-        "### 1.1.1 複素数\n",
-        "\n",
-        "1. 虚数単位 $i$ は $i^2= -1$ を満たす1つの数。 $a > 0$ のとき、$\\sqrt{-a}=\\sqrt{a} i$ 特に $\\sqrt{-1} = i$.\n",
-        "\n",
-        "1. 複素数 $a+bi$ において、$a$ を実部、$b$を虚部と言う。複素数のうち、$b=0$のものを実数、$b \\neq 0$ のものを虚数、特に $a=0, b \\neq 0$のものを純虚と言う。\n",
-        "\n",
-        "### 1.1.2 複素数の性質\n",
+        "1. 複素数 $a+bi$ において、$a$ を実部、$b$ を虚部と言う。複素数のうち、$b=0$ のものを実数、$b \\neq 0$ のものを虚数、特に $a=0, b \\neq 0$ のものを純虚数と言う。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "68PWhvAPdsVy"
+      },
+      "source": [
+        "**複素数の性質**\n",
         "\n",
         "1. 相等 $a+bi=c+di \\Longleftrightarrow a＝c，b＝d$ 特に  $a+bi=0 \\Longleftrightarrow a＝0，b＝0$\n",
         "1. 計算法則 文字 $i$ の式と考え、実数の場合と同じように計算し、$i^2$ は $-1$ で置き換える。\n",
