Colaboratory を使用して作成しました

--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPr7j2a95AJAK5/NNX13Abm",
+      "authorship_tag": "ABX9TyMsXs3+cZAT/p9B/ElaBF1/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,21 +83,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "r-4hCvK9hydu",
-        "outputId": "758adad0-4fd3-43d0-ff21-70d824eb2246",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "758adad0-4fd3-43d0-ff21-70d824eb2246"
       },
       "source": [
-        "# sympy の実験 => α β を表す\r\n",
+        "# sympy の実験 => α β を表す。 * => \\times にする。\r\n",
         "from  sympy import *\r\n",
         "init_printing(latex_printer=lambda *args, **kwargs: latex(*args, mul_symbol='times', **kwargs))\r\n",
         "alpha, beta, theta = sympy.symbols('alpha beta theta')\r\n",
         "n = symbols('n')\r\n",
         "display(Eq(theta, alpha + 360 * n))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
