--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHF9t2fS2a7na0RBmCnA2b",
+      "authorship_tag": "ABX9TyOhrTWEALBTTqEBRDpUrYI8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,10 +102,16 @@
       "source": [
         "**空間の座標**  \r\n",
         "\r\n",
-        "座標軸 $\\quad$ 定点 $ O $ を共通の原点とする数直線 $ x,x', y,y', zz' $ を、その  2つずつが直交するようにとるとき、\r\n",
-        "数直線 $ x,x', y,y', zz' $ をそれぞれ $ x $ 軸、 $ y $ 軸、 $ z $ 軸といい、まとめて座標軸という。  \r\n",
+        "座標軸 $\\quad$ 定点 $\\mathrm O$ を共通の原点とする数直線 $ x,x', y,y', zz' $ を、その  2つずつが直交するようにとるとき、\r\n",
+        "数直線 $ x,x', y,y', zz' $ をそれぞれ $x$ 軸、 $y$ 軸、 $z$ 軸といい、まとめて座標軸という。  \r\n",
         "\r\n",
-        "座標平面 $\\quad$ x $ 軸と $ y $ 軸、 $ z $ 軸"
+        "座標平面 $\\quad x$ 軸と $y$ 軸が定める平面を $xy$ 平面、$y$ 軸と $z$ 軸が定める平面を $yz$ 平面、$z$ 軸と $x$ 軸が定める平面を $zx$ 平面という。 まとめて座標平面という。\r\n",
+        "\r\n",
+        "**2点間の距離**\r\n",
+        "\r\n",
+        "2点 $\\mathrm A (x1,y1,z1), \\mathrm B(x2,y2,z2)$ について  \r\n",
+        "$AB = \\sqrt{(x_2-x_1)^2+(y_2-y_1)^2+(z_2-z_1)^2}$  \r\n",
+        "特に、原点 $\\mathrm O$と点 $\\mathrm A$ の距離は $\\mathrm{OA} = \\sqrt {{x_1}^2+{y_1}^2+{z_1}^2}$\r\n"
       ]
     },
     {
@@ -114,7 +120,16 @@
         "id": "li9k1-77GpTi"
       },
       "source": [
-        "# いまここ p.58"
+        "# いまここ p.59"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zZYcFvL5rurC"
+      },
+      "source": [
+        "**空間のベクトルの演算方法**"
       ]
     }
   ]
