Colaboratory を使用して作成しました

--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhrTWEALBTTqEBRDpUrYI8",
+      "authorship_tag": "ABX9TyON0jjkff9/jw0elCoSeye/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,6 +117,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "zZYcFvL5rurC"
+      },
+      "source": [
+        "**空間のベクトルの演算法則** ($k,l$ は実数)  \r\n",
+        "\r\n",
+        "空間ベクトルの加法、減法、実数倍や単位ベクトル、逆ベクトル、零ベクトルなどは、平面ベクトルの場合と全く同様にていぎされ、次のことが成り立つ。\r\n",
+        "\r\n",
+        "加法 $\\quad \\overrightarrow a + \\overrightarrow b = \\overrightarrow b + \\overrightarrow a$ (交換法則) $\\quad (\\overrightarrow a + \\overrightarrow b) + \\overrightarrow c = \\overrightarrow a + (\\overrightarrow b + \\overrightarrow c)$ (結合法則)\r\n",
+        "\r\n",
+        "$ \\overrightarrow a + (-  \\overrightarrow a) =  \\overrightarrow 0, \\quad $\r\n",
+        "$ \\overrightarrow a + \\overrightarrow 0 =  \\overrightarrow a, \\quad $\r\n",
+        "$ \\overrightarrow a -  \\overrightarrow b = \\overrightarrow a + (-  \\overrightarrow b)  $\r\n",
+        "\r\n",
+        "実数倍 $\\quad k (l \\overrightarrow a) = (kl) \\overrightarrow a, \\quad $\r\n",
+        "$(k+l)\\overrightarrow a = k\\overrightarrow a + l\\overrightarrow a, \\quad $\r\n",
+        "$k(\\overrightarrow a + \\overrightarrow b) = k\\overrightarrow a + k\\overrightarrow b$\r\n",
+        "\r\n",
+        "**空間ベクトルの平行条件**\r\n",
+        "\r\n",
+        "$\\overrightarrow a \\neq \\overrightarrow 0,  \\overrightarrow b \\neq \\overrightarrow 0$ のとき、$\\overrightarrow a \\parallel \\overrightarrow b \\Longleftrightarrow \\overrightarrow b = k\\overrightarrow a$ となる実数 $k$ がある。\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "li9k1-77GpTi"
       },
       "source": [
@@ -126,10 +151,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zZYcFvL5rurC"
+        "id": "JuKUlOoMA7hQ"
       },
       "source": [
-        "**空間のベクトルの演算方法**"
+        "**ベクトルの分解 (空間)**\r\n",
+        "\r\n",
+        "空間内に"
       ]
     }
   ]
