Colaboratory を使用して作成しました

--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyON0jjkff9/jw0elCoSeye/",
+      "authorship_tag": "ABX9TyPGJx61Ll7deddcl1RAAukj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,7 +156,7 @@
       "source": [
         "**ベクトルの分解 (空間)**\r\n",
         "\r\n",
-        "空間内に"
+        "空間内に、同じ平面上にない 4点 $\\mathrm{O,A,B,C}$ があるとき、任意の点を $\\mathrm P $  とし、"
       ]
     }
   ]
