Colaboratory を使用して作成しました

--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGJx61Ll7deddcl1RAAukj",
+      "authorship_tag": "ABX9TyO5+l4h/ycts62yPlmDb0NY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,21 +142,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "li9k1-77GpTi"
-      },
-      "source": [
-        "# いまここ p.59"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "JuKUlOoMA7hQ"
       },
       "source": [
         "**ベクトルの分解 (空間)**\r\n",
         "\r\n",
-        "空間内に、同じ平面上にない 4点 $\\mathrm{O,A,B,C}$ があるとき、任意の点を $\\mathrm P $  とし、"
+        "空間内に、同じ平面上にない 4点 $\\mathrm{O,A,B,C}$ があるとき、任意の点を $\\mathrm P $  とし、\r\n",
+        "\r\n",
+        "$\\overrightarrow {\\mathrm{OA}} = \\overrightarrow a, \\overrightarrow {\\mathrm{OB}} = \\overrightarrow b, \\overrightarrow {\\mathrm{OC}} = \\overrightarrow c, \\overrightarrow {\\mathrm{OP}} = \\overrightarrow p$\r\n",
+        "とする ($s,t,u,s',t',u'$ は実数)。\r\n",
+        "\r\n",
+        "1. 任意のベクトル $\\overrightarrow p$ はただ 1通りに $\\overrightarrow p = s \\overrightarrow a + t \\overrightarrow b + u \\overrightarrow c$ の形に表される。\r\n",
+        "\r\n",
+        "1. $s \\overrightarrow a + t \\overrightarrow b + u \\overrightarrow c = s' \\overrightarrow a + t' \\overrightarrow b + u' \\overrightarrow c \\Longleftrightarrow s=s', t=t', u=u'$  \r\n",
+        "特に  $s \\overrightarrow a + t \\overrightarrow b + u \\overrightarrow c = \\overrightarrow 0 \\Longleftrightarrow s=0, t=0, u=0$ "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "li9k1-77GpTi"
+      },
+      "source": [
+        "# いまここ p.60"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jN4stLXYieMs"
+      },
+      "source": [
+        "**基本例題 35**\r\n",
+        "\r\n"
       ]
     }
   ]
