Colaboratory を使用して作成しました

--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYf2KYt+DjEwEyRMiigbpW",
+      "authorship_tag": "ABX9TyOztsG/BloFvHrsAjosi/wE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,15 +161,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "li9k1-77GpTi"
-      },
-      "source": [
-        "# いまここ p.60"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "jN4stLXYieMs"
       },
       "source": [
@@ -192,7 +183,30 @@
       "source": [
         "**基本例題 36**\r\n",
         "\r\n",
-        "3点 "
+        "3点 $\\mathrm O (0,0,0), \\mathrm A (-1,0,2), \\mathrm B (2,1,-1)$ について、  \r\n",
+        "\r\n",
+        "1. 2点 $\\mathrm{A,B}$ から等距離にある $z$ 軸上の点 $\\mathrm P$ の座標を求める。\r\n",
+        "\r\n",
+        "1. 3点 $\\mathrm{O,A,B}$ から等距離にある、$xy$ 平面上の点 $\\mathrm Q$ の座標を求める。\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "li9k1-77GpTi"
+      },
+      "source": [
+        "# いまここ p.62"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EdInG_hHvuJ1"
+      },
+      "source": [
+        "**基本例題 37**"
       ]
     }
   ]
