--- a/chartmathb02vector2.ipynb
+++ b/chartmathb02vector2.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmathb02vector2.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOztsG/BloFvHrsAjosi/wE",
+      "authorship_tag": "ABX9TyNgpqfcaNFnGTlPGnJzSh2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,9 @@
         "id": "EdInG_hHvuJ1"
       },
       "source": [
-        "**基本例題 37**"
+        "**基本例題 37**\r\n",
+        "\r\n",
+        "平行六面体 $\\mathrm{ABCD \\mbox{-} EFGH}$ において"
       ]
     }
   ]
