Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOtKKX+DhJeWhuucLiXfR9b",
+      "authorship_tag": "ABX9TyOhvhVkQImisTHHBSu2w/qu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,30 @@
         "\r\n",
         "次の多項式の同類項をまとめて整理する。 また 2, 3 の多項式において、[  ] 内の文字に着目したとき、その次数と定数項はなにか。\r\n",
         "\r\n",
-        "1. "
+        "1. $3x^2+2x-6-4x^2+3x+2$\r\n",
+        "\r\n",
+        "1. $2a^2-ab-b^2+4ab+3a^2+2b^2$ $\\quad [b]$\r\n",
+        "\r\n",
+        "1. $x^2-2ax^2y+4xy-3by+y^2+2xy-2by+4a$ $\\quad [x と y], [y]$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yg0w6HRPllg0"
+      },
+      "source": [
+        "# 多項式の加法・減法と乗法\r\n",
+        "\r\n",
+        "多項式の計算における基本法則\r\n",
+        "\r\n",
+        "$\r\n",
+        "\\begin{array}{lccc}\r\n",
+        "&加法 & & 乗法 \\\\\r\n",
+        "交換法則 & A\r\n",
+        "結合法則 &\r\n",
+        "\\end{array}\r\n",
+        "$"
       ]
     }
   ]
