--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOhvhVkQImisTHHBSu2w/qu",
+      "authorship_tag": "ABX9TyP4aGhvl+e1uQtddjVlw7n8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,12 +109,12 @@
         "id": "WFwEVbk3uaCv"
       },
       "source": [
-        "多項式でないもの\r\n",
-        "\r\n",
-        "$\\quad \\quad \\displaystyle \\frac{1}{x+1},~x+\\frac{3}{x},~\\sqrt{x^2+1},~x^2-2\\sqrt{x}-\\sqrt5$\r\n",
-        "\r\n",
-        "多項式の整理 $\\quad$ 項の次数の高いものから順に並べる $\\cdots\\cdots$降冪 (こうべき)\r\n",
-        "\r\n"
+        "多項式でないもの\n",
+        "\n",
+        "$\\quad \\quad \\displaystyle \\frac{1}{x+1},~x+\\frac{3}{x},~\\sqrt{x^2+1},~x^2-2\\sqrt{x}-\\sqrt5$\n",
+        "\n",
+        "多項式の整理 $\\quad$ 項の次数の高いものから順に並べる $\\cdots\\cdots$降冪 (こうべき)\n",
+        "\n"
       ]
     },
     {
@@ -123,15 +123,33 @@
         "id": "OQnPAxFCY3xo"
       },
       "source": [
-        "**基本例題 1**\r\n",
-        "\r\n",
-        "次の多項式の同類項をまとめて整理する。 また 2, 3 の多項式において、[  ] 内の文字に着目したとき、その次数と定数項はなにか。\r\n",
-        "\r\n",
-        "1. $3x^2+2x-6-4x^2+3x+2$\r\n",
-        "\r\n",
-        "1. $2a^2-ab-b^2+4ab+3a^2+2b^2$ $\\quad [b]$\r\n",
-        "\r\n",
+        "**基本例題 1**\n",
+        "\n",
+        "次の多項式の同類項をまとめて整理する。 また 2, 3 の多項式において、[  ] 内の文字に着目したとき、その次数と定数項はなにか。\n",
+        "\n",
+        "1. $3x^2+2x-6-4x^2+3x+2$\n",
+        "\n",
+        "1. $2a^2-ab-b^2+4ab+3a^2+2b^2$ $\\quad [b]$\n",
+        "\n",
         "1. $x^2-2ax^2y+4xy-3by+y^2+2xy-2by+4a$ $\\quad [x と y], [y]$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RDzTcp_Vf2dU"
+      },
+      "source": [
+        "**解答**\n",
+        "\n",
+        "1. $-x^2+5x-4$\n",
+        "\n",
+        "1. $5a^2+3ab+b^2$\n",
+        "\n",
+        "3. $x^3 - 2ax^2y +6xy + y^2 -5by +4a$  \n",
+        "$x$ と $y$ に着目すると $\\quad$ 次数 3, 定数項 $4a$   \n",
+        "更に、$y$に着目すると $y^2+(-2ax^2+6x-5b)y+x^3+4a$ より  \n",
+        "$\\quad$ 次数 2, 定数項 $x^2+4a$  \n"
       ]
     },
     {
@@ -140,18 +158,49 @@
         "id": "Yg0w6HRPllg0"
       },
       "source": [
-        "# 多項式の加法・減法と乗法\r\n",
-        "\r\n",
-        "多項式の計算における基本法則\r\n",
-        "\r\n",
-        "$\r\n",
-        "\\begin{array}{lccc}\r\n",
-        "&加法 & & 乗法 \\\\\r\n",
-        "交換法則 & A\r\n",
-        "結合法則 &\r\n",
-        "\\end{array}\r\n",
+        "# 多項式の加法・減法と乗法\n",
+        "\n",
+        "多項式の計算における基本法則\n",
+        "\n",
+        "$\n",
+        "\\begin{array}{lccc}\n",
+        "&加法  &|& 乗法 \\\\\n",
+        "交換法則 & A+B=B+A &|& AB=BA \\\\\n",
+        "結合法則 & (A+B)+C=A+(B+C) &|& (AB)C = A(BC)\n",
+        "\\end{array}\n",
+        "$\n",
+        "\n",
+        "分配法則 $\\quad A(B+C)=AB+AC, (A+B)C = AC+BC$\n",
+        "\n",
+        "1. 指数法則\n",
+        "\n",
+        "  - $a^ma^n= a^{m+n}$  \n",
+        "  - $(a^m)^n = a^{mn}$  \n",
+        "  - $(ab)^n = a^n b^n$  \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3lgO2KPGjH2f"
+      },
+      "source": [
+        "**展開の公式**\n",
+        "\n",
+        "$(a+b)^3\n",
         "$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kv5_WQzQi_mD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
