Colaboratory を使用して作成しました

--- a/chartmath101equation.ipynb
+++ b/chartmath101equation.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath101equation.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4aGhvl+e1uQtddjVlw7n8",
+      "authorship_tag": "ABX9TyPyvEferncl247yRkI7x9m8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -187,8 +187,130 @@
       "source": [
         "**展開の公式**\n",
         "\n",
-        "$(a+b)^3\n",
-        "$"
+        "$(a+b)^2 = a^2+2ab+b^2$\n",
+        "\n",
+        "$(a-b)^2 = a^2-2ab+b^2$\n",
+        "\n",
+        "$(a+b)(a-b)=a^2-b^2$\n",
+        "\n",
+        "$(x+a)(x+b)=x^2+(a+b)x+ab$\n",
+        "\n",
+        "$(ax+b)(cx+d)=acx^2+(ad+bc)x+bd$\n",
+        "\n",
+        "$(a+b)(a^2-ab+b^2)=a^3+b^3$\n",
+        "\n",
+        "$(a-b)(a^2+ab+b^2)=a^3-b^3$\n",
+        "\n",
+        "$(a+b)^3=a^3+3a^2b+3ab^2+b^3$\n",
+        "\n",
+        "$(a-b)^3=a^3-3a^2b+3ab^2-b^3$\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xs6cPTORvZjr",
+        "outputId": "d26ab02d-192c-4246-fd71-68d03d93fb7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        }
+      },
+      "source": [
+        "from sympy import *\n",
+        "a,b=symbols(\"a,b\")\n",
+        "exp=(a+b)\n",
+        "exp2=(a-b)\n",
+        "display(exp**3)\n",
+        "display(expand(exp**3))\n",
+        "display(exp2**3)\n",
+        "display(expand(exp2**3))\n",
+        "display(exp*exp2)\n",
+        "display(expand(exp*exp2))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + b\\right)^{3}$",
+            "text/plain": [
+              "(a + b)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{3} + 3 a^{2} b + 3 a b^{2} + b^{3}$",
+            "text/plain": [
+              "a**3 + 3*a**2*b + 3*a*b**2 + b**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a - b\\right)^{3}$",
+            "text/plain": [
+              "(a - b)**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{3} - 3 a^{2} b + 3 a b^{2} - b^{3}$",
+            "text/plain": [
+              "a**3 - 3*a**2*b + 3*a*b**2 - b**3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a - b\\right) \\left(a + b\\right)$",
+            "text/plain": [
+              "(a - b)*(a + b)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} - b^{2}$",
+            "text/plain": [
+              "a**2 - b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I_V5uIgEwKmu"
+      },
+      "source": [
+        ""
       ]
     },
     {
