Colaboratory を使用して作成しました

--- a/sympy_kasaimasumi.ipynb
+++ b/sympy_kasaimasumi.ipynb
@@ -6,7 +6,7 @@
       "name": "sympy_kasaimasumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO8N6OeXGAc1dUzVNm9UuVl",
+      "authorship_tag": "ABX9TyNdy4K+uM/hyYx2jaSBCMfy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2387,16 +2387,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "PEhtfh5RRm45",
-        "outputId": "69b80702-a60a-4a64-920c-2349e98e7eef",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "69b80702-a60a-4a64-920c-2349e98e7eef"
       },
       "source": [
         "summation (i**2, (i,1,10))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2417,16 +2417,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "sBiMH5VrRvq5",
-        "outputId": "5d18c9be-a1b6-439f-a09d-decfe2914a34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 37
-        }
+        },
+        "outputId": "5d18c9be-a1b6-439f-a09d-decfe2914a34"
       },
       "source": [
         "summation(i,(i,1,10))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2447,11 +2447,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "pu3n18R8SBoc",
-        "outputId": "17adf008-25d6-402d-b492-914175c536f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
-        }
+        },
+        "outputId": "17adf008-25d6-402d-b492-914175c536f9"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -2461,7 +2461,7 @@
         "display(summation(i**2, (i, 1, N)))\n",
         "display(factor(summation(i**2, (i, 1, N))))\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2505,7 +2505,12 @@
         "**練習**\n",
         "\n",
         "**数列の和**\n",
-        "\n"
+        "\n",
+        "等差数列 arithmetic sequence\n",
+        "等比数列 geometric sequence\n",
+        "\n",
+        "1. 初項 $a_1$, 交差 $d$ の等差数列の第1項から第$n$項までの和を求める。\n",
+        "1. 初項が 3、公比が 2 等比数列"
       ]
     },
     {
