--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -61,21 +61,21 @@
         "id": "M_IYHSO3fN5l"
       },
       "source": [
-        "# メモ\r\n",
-        "colab で latex を勉強する。\r\n",
-        "\r\n",
-        "Colab で latex を書くには 3 通りある。\r\n",
-        "\r\n",
-        "1. マークダウンでテキストセルに書く。 \r\n",
-        "2. %%latex マジックでコードセルに書く。 \r\n",
-        "3. from sympy import *, from IPython.display import Markdown, display(Markdown(\"\")) で表示する。\r\n",
-        "\r\n",
-        "\r\n",
-        "マークダウンで書くのが基本なので、基本に従うべきところは従う。  \r\n",
-        "\r\n",
-        " %%latex マジックのアウトプットは印刷時に崩れる。 %%latex は完全な latex ではない。 mathjax ベースのサブセットである。latex のソースと結果のアウトプットの両方が見えて学習上効果的なのでその限りにおいて利用する。\r\n",
-        "\r\n",
-        "sympy と IPython を使うのはプログラムがメインのときなので、課題の解答の中に説明を加えたいときなどに使う。\r\n"
+        "# メモ\n",
+        "colab で latex を勉強する。\n",
+        "\n",
+        "Colab で latex を書くには 3 通りある。\n",
+        "\n",
+        "1. マークダウンでテキストセルに書く。 \n",
+        "2. %%latex マジックでコードセルに書く。 \n",
+        "3. from sympy import *, from IPython.display import Markdown, display(Markdown(\"\")) で表示する。\n",
+        "\n",
+        "\n",
+        "マークダウンで書くのが基本なので、基本に従うべきところは従う。  \n",
+        "\n",
+        " %%latex マジックのアウトプットは印刷時に崩れる。 %%latex は完全な latex ではない。 mathjax ベースのサブセットである。latex のソースと結果のアウトプットの両方が見えて学習上効果的なのでその限りにおいて利用する。\n",
+        "\n",
+        "sympy と IPython を使うのはプログラムがメインのときなので、課題の解答の中に説明を加えたいときなどに使う。\n"
       ]
     },
     {
@@ -126,13 +126,13 @@
         "id": "4iJm4gvVNuCc"
       },
       "source": [
-        "マークダウンでテキストの中に latex を入れることができる。  \r\n",
-        "インラインで入れることもできるし $x = 3$ とか。\r\n",
-        "\r\n",
-        "$$\r\n",
-        "x = 3\r\n",
-        "$$\r\n",
-        "\r\n",
+        "マークダウンでテキストの中に latex を入れることができる。  \n",
+        "インラインで入れることもできるし $x = 3$ とか。\n",
+        "\n",
+        "$$\n",
+        "x = 3\n",
+        "$$\n",
+        "\n",
         "とか。"
       ]
     },
@@ -147,11 +147,11 @@
         "outputId": "66922116-5978-4ac1-c3fe-d0d76f9c4d0d"
       },
       "source": [
-        "# 実験学習\r\n",
-        "from sympy import *\r\n",
-        "from IPython.display import Markdown\r\n",
-        "display(Markdown(\"実験学習 $x = 3$ と書く\"))\r\n",
-        "x = symbols('x')\r\n",
+        "# 実験学習\n",
+        "from sympy import *\n",
+        "from IPython.display import Markdown\n",
+        "display(Markdown(\"実験学習 $x = 3$ と書く\"))\n",
+        "x = symbols('x')\n",
         "display(Eq(x,3))"
       ],
       "execution_count": null,
@@ -188,14 +188,14 @@
         "id": "RLjJ7URGdV1Z"
       },
       "source": [
-        "# マークダウンと %%latex の違い\r\n",
-        "1. コードセルに %%latex と書くとその行以降 mathjax のルールが適用される。\r\n",
-        "1. %%latex以降にバックスラッシュ \\ でエスケープされていない \\$ マークがあると latex で解釈せずに入力のまま出力する。 \r\n",
-        "1. % 記号はコメント記号なので文法上は許されるが、% 記号以降が出力されないのでバックスラッシュ \\ でエスケープする必要がある。\r\n",
-        "1. バックスラッシュ \\ 自体は \\backslash と書く。 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる。\r\n",
-        "1. 地の文、テキストも数式として解釈されるので、英文字はフォントが変わる。普通の文字にしたい場合は \\text{} で括る。\r\n",
-        "1. 改行はマークダウンではスペース2個だが、%%latex では バックスラッシュ \\ を2個 \\\\\\\\ になる。\r\n",
-        "1. その他マークダウン上の便利な機能。箇条書きの自動ナンバリングなどは使えない。\r\n"
+        "# マークダウンと %%latex の違い\n",
+        "1. コードセルに %%latex と書くとその行以降 mathjax のルールが適用される。\n",
+        "1. %%latex以降にバックスラッシュ \\ でエスケープされていない \\$ マークがあると latex で解釈せずに入力のまま出力する。 \n",
+        "1. % 記号はコメント記号なので文法上は許されるが、% 記号以降が出力されないのでバックスラッシュ \\ でエスケープする必要がある。\n",
+        "1. バックスラッシュ \\ 自体は \\backslash と書く。 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる。\n",
+        "1. 地の文、テキストも数式として解釈されるので、英文字はフォントが変わる。普通の文字にしたい場合は \\text{} で括る。\n",
+        "1. 改行はマークダウンではスペース2個だが、%%latex では バックスラッシュ \\ を2個 \\\\\\\\ になる。\n",
+        "1. その他マークダウン上の便利な機能。箇条書きの自動ナンバリングなどは使えない。\n"
       ]
     },
     {
@@ -209,15 +209,15 @@
         "outputId": "6c3e0ee5-621b-4c2e-a6e1-7f7799bdda6d"
       },
       "source": [
-        "# 実験\r\n",
-        "%%latex\r\n",
-        "this is a pen. \\\\\r\n",
-        "\\text{this is a pen} \\\\\r\n",
-        "\\backslash \\\\\r\n",
-        "\\tilde{x}\\\\\r\n",
-        "\\tilde{} \\quad x\\\\\r\n",
-        "\\hat{x} \\\\\r\n",
-        "\\hat{} \\quad  x \\\\\r\n",
+        "# 実験\n",
+        "%%latex\n",
+        "this is a pen. \\\\\n",
+        "\\text{this is a pen} \\\\\n",
+        "\\backslash \\\\\n",
+        "\\tilde{x}\\\\\n",
+        "\\tilde{} \\quad x\\\\\n",
+        "\\hat{x} \\\\\n",
+        "\\hat{} \\quad  x \\\\\n",
         "x^3 \\\\"
       ],
       "execution_count": null,
@@ -242,15 +242,15 @@
         "id": "ug4l1dHmOnvE"
       },
       "source": [
-        "同じことをマークダウンでやってみる。\r\n",
-        "\r\n",
-        "$this is a pen.$  \r\n",
-        "$\\text{this is a pen}$  \r\n",
-        "$\\backslash$  \r\n",
-        "$\\tilde{x}$  \r\n",
-        "$\\tilde{} \\quad x$  \r\n",
-        "$\\hat{x} $  \r\n",
-        "$\\hat{} \\quad  x $  \r\n",
+        "同じことをマークダウンでやってみる。\n",
+        "\n",
+        "$this is a pen.$  \n",
+        "$\\text{this is a pen}$  \n",
+        "$\\backslash$  \n",
+        "$\\tilde{x}$  \n",
+        "$\\tilde{} \\quad x$  \n",
+        "$\\hat{x} $  \n",
+        "$\\hat{} \\quad  x $  \n",
         "$x^3 $  "
       ]
     },
@@ -299,12 +299,12 @@
         "id": "VQ5cdQKxB0lO"
       },
       "source": [
-        "マークダウンでドルマークで囲むと latex(mathjax) になる。 2個のドルマークで囲むと行替えされ、センタリングされた数式になる。\r\n",
-        "\r\n",
-        "$$ E=mc^2$$\r\n",
-        "\r\n",
-        "ここで $c$ は光速をあらわし、値は次の通り。  \r\n",
-        "\r\n",
+        "マークダウンでドルマークで囲むと latex(mathjax) になる。 2個のドルマークで囲むと行替えされ、センタリングされた数式になる。\n",
+        "\n",
+        "$$ E=mc^2$$\n",
+        "\n",
+        "ここで $c$ は光速をあらわし、値は次の通り。  \n",
+        "\n",
         "$$ c = 299{,}792{,}458 \\, \\mathrm{m/s} $$"
       ]
     },
@@ -354,10 +354,10 @@
         "id": "75x1IdwRPUV2"
       },
       "source": [
-        "いまの考え\r\n",
-        "\r\n",
-        "マークダウンでインラインでなく、数式として入れた場合、同じ数式を次のコードセルで %%latex として入れる。\r\n",
-        "\r\n",
+        "いまの考え\n",
+        "\n",
+        "マークダウンでインラインでなく、数式として入れた場合、同じ数式を次のコードセルで %%latex として入れる。\n",
+        "\n",
         "そうすることにより、数式の意味が明示的になり、さらに sympy などのプログラミングにつながる。"
       ]
     },
@@ -367,8 +367,23 @@
         "id": "JJRGMDwVF90w"
       },
       "source": [
-        "# ドル`$`マーク\n",
-        "この本は\\$35.40。\n"
+        "# ドル`$`マーク ドルサインをエスケープするには\n",
+        "\n",
+        "この本は\\$35.40。\n",
+        "\n",
+        "ドルサインは latex (mathjax) 対応のマークダウンでは mathjax の begin, end の記号なので、エスケープする必要がある。\n",
+        "Colab 環境ではバックスラッシュ `\\` でエスケープできるが、それでは他の環境との互換性がなくなる。\n",
+        "\n",
+        "つまり、`$`サインは dallar sign は escape できない!!!!\n",
+        "\n",
+        "ドルサイン自体をコードで書くしか方法はないと思わる。\n",
+        "\n",
+        "&#0024;\n",
+        "&#36;\n",
+        "&#x24;\n",
+        "&dollar;\n",
+        "\n",
+        "この本は&dollar;35.40、とかね。\n"
       ]
     },
     {
@@ -391,13 +406,13 @@
         "outputId": "0049d49a-8bf1-4bea-bceb-382018671831"
       },
       "source": [
-        "# 水平方向の空白の実験\r\n",
-        "%%latex\r\n",
-        "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\r\n",
-        "a~b~c~d~e~f~g~ tilde\\\\\r\n",
-        "a~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\r\n",
-        "a\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\r\n",
-        "a\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\r\n",
+        "# 水平方向の空白の実験\n",
+        "%%latex\n",
+        "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\n",
+        "a~b~c~d~e~f~g~ tilde\\\\\n",
+        "a~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\n",
+        "a\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\n",
+        "a\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\n",
         "a\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\"
       ],
       "execution_count": null,
@@ -431,13 +446,13 @@
         "id": "D07ckSl95vvl"
       },
       "source": [
-        "latex の中での改行は \\ を行末に2個入れる。  \r\n",
-        "\r\n",
-        "空白行は \\\\ のあとに {1em} とか書く。  \r\n",
-        "\\{\\}+\\\\ で対応することもできる。\r\n",
-        "\r\n",
-        "`{}\\\\`\r\n",
-        "\r\n",
+        "latex の中での改行は \\ を行末に2個入れる。  \n",
+        "\n",
+        "空白行は \\\\ のあとに {1em} とか書く。  \n",
+        "\\{\\}+\\\\ で対応することもできる。\n",
+        "\n",
+        "`{}\\\\`\n",
+        "\n",
         "とか。"
       ]
     },
@@ -452,11 +467,11 @@
         "outputId": "d2398031-ed6f-40bc-8366-cd55d92e4788"
       },
       "source": [
-        "%%latex\r\n",
-        "latex の中での改行は\\backslash を行末に2個入れる。\\\\[1em]\r\n",
-        "空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\\r\n",
-        "\\{\\}+\\backslash\\backslashで対応することもできる。\\\\\r\n",
-        "{}\\\\\r\n",
+        "%%latex\n",
+        "latex の中での改行は\\backslash を行末に2個入れる。\\\\[1em]\n",
+        "空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\\n",
+        "\\{\\}+\\backslash\\backslashで対応することもできる。\\\\\n",
+        "{}\\\\\n",
         "とか。"
       ],
       "execution_count": null,
@@ -550,13 +565,13 @@
         "outputId": "ae773b4d-67d7-40b8-af8e-e19af93e1018"
       },
       "source": [
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "\r\n",
-        "\\frac{\\pi}{2} \\\\\r\n",
-        "= \\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 \\\\\r\n",
-        "= \\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1} \\\\\r\n",
-        "= \\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}\r\n"
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "\\frac{\\pi}{2} \\\\\n",
+        "= \\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 \\\\\n",
+        "= \\sum_{k=0}^{\\infty} \\frac{(2k)!}{2^{2k}(k!)^2} \\frac{1}{2k+1} \\\\\n",
+        "= \\prod_{k=1}^{\\infty} \\frac{4k^2}{4k^2 - 1}\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -598,26 +613,26 @@
         "id": "ohnAEa3ppMIq"
       },
       "source": [
-        "マークダウンで英文字は   \r\n",
-        "abcdefABC  \r\n",
-        "となるが、ドルマークで囲って latex にすると、数学用のフォントになる。  \r\n",
-        "$This is math standard font abcdefABC$  \r\n",
-        "この latex のなかで text とすると数学フォントではなくなる。  \r\n",
-        "$\\text{This is a text}$  \r\n",
-        "これを mathit とすると数学用のフォントになる。  \r\n",
-        "$\\mathit{\\text{This is math italian abcdefABC}}$  \r\n",
-        "スペースも機能するのでいいかもしれない。\r\n",
-        "\r\n",
-        "$\\mathrm{\\text{This is mathrm -> abcABC}}$  \r\n",
-        "$\\mathit{\\text{This is mathit -> abcABC}}$  \r\n",
-        "\r\n",
-        "数学のテキストでのアルファベットの使い分けは通常はイタリックで、座標とかはセリフ付きのローマン体の大文字が使われている。 ベクトルを小文字で表すときに上矢印をつけずにボールド体を使うことがある。\r\n",
-        "\r\n",
-        "手書きで部分白抜きを真似た mathbb というのもあって、これで書かれたテキストもある。\r\n",
-        "\r\n",
-        "$\\mathbf{\\text{This is mathbf -> abcABC}}$  \r\n",
-        "$\\mathbb{\\text{This is mathbb -> abcABC}}$  \r\n",
-        "$\\mathcal{\\text{This is mathcal -> abcABC}}$  \r\n",
+        "マークダウンで英文字は   \n",
+        "abcdefABC  \n",
+        "となるが、ドルマークで囲って latex にすると、数学用のフォントになる。  \n",
+        "$This is math standard font abcdefABC$  \n",
+        "この latex のなかで text とすると数学フォントではなくなる。  \n",
+        "$\\text{This is a text}$  \n",
+        "これを mathit とすると数学用のフォントになる。  \n",
+        "$\\mathit{\\text{This is math italian abcdefABC}}$  \n",
+        "スペースも機能するのでいいかもしれない。\n",
+        "\n",
+        "$\\mathrm{\\text{This is mathrm -> abcABC}}$  \n",
+        "$\\mathit{\\text{This is mathit -> abcABC}}$  \n",
+        "\n",
+        "数学のテキストでのアルファベットの使い分けは通常はイタリックで、座標とかはセリフ付きのローマン体の大文字が使われている。 ベクトルを小文字で表すときに上矢印をつけずにボールド体を使うことがある。\n",
+        "\n",
+        "手書きで部分白抜きを真似た mathbb というのもあって、これで書かれたテキストもある。\n",
+        "\n",
+        "$\\mathbf{\\text{This is mathbf -> abcABC}}$  \n",
+        "$\\mathbb{\\text{This is mathbb -> abcABC}}$  \n",
+        "$\\mathcal{\\text{This is mathcal -> abcABC}}$  \n",
         "$\\mathfrak{\\text{This is mathfrak -> abcABC}}$  "
       ]
     },
@@ -632,20 +647,20 @@
         "outputId": "0e282d53-26f6-4b7c-ee6f-3f893721edb9"
       },
       "source": [
-        "%%latex\r\n",
-        "abcdefABC\\\\\r\n",
-        "\\mathrm{a b c d e f A B C}\\\\\r\n",
-        "\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う\r\n",
-        "\\bm{a b c d e f A B C }\\\\ %% \r\n",
-        "\\text{a b c d e f A B C }\\\\\r\n",
-        "\\mathbb{a b c d e f A B C }\\\\\r\n",
-        "% \\mathbbm{a b c d e f A B C }\\\\\r\n",
-        "\\mathcal {abcdefABCDEF}\\\\\r\n",
-        "\\mathfrak {abcdefABCDEF}\\\\\r\n",
-        "\\mathit {abcdefABCDEF}\\\\\r\n",
+        "%%latex\n",
+        "abcdefABC\\\\\n",
+        "\\mathrm{a b c d e f A B C}\\\\\n",
+        "\\mathbf{a b c d e f A B C} \\\\ %%ベクトルに使う\n",
+        "\\bm{a b c d e f A B C }\\\\ %% \n",
+        "\\text{a b c d e f A B C }\\\\\n",
+        "\\mathbb{a b c d e f A B C }\\\\\n",
+        "% \\mathbbm{a b c d e f A B C }\\\\\n",
+        "\\mathcal {abcdefABCDEF}\\\\\n",
+        "\\mathfrak {abcdefABCDEF}\\\\\n",
+        "\\mathit {abcdefABCDEF}\\\\\n",
         "\\mathrm{\\text{this is a pen.}}"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -676,11 +691,11 @@
         "id": "3-QF3ROg3LXj"
       },
       "source": [
-        "$\r\n",
-        "A =\\begin{pmatrix}\r\n",
-        "    a_{11} & \\ldots & a_{1n} \\\\\r\n",
-        "    \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{m1} & \\ldots & a_{mn}\r\n",
+        "$\n",
+        "A =\\begin{pmatrix}\n",
+        "    a_{11} & \\ldots & a_{1n} \\\\\n",
+        "    \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & \\ldots & a_{mn}\n",
         "\\end{pmatrix}$"
       ]
     },
@@ -739,12 +754,12 @@
         "outputId": "45749101-db34-480a-d3bc-5f9dea5be309"
       },
       "source": [
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "A =\\begin{bmatrix}\r\n",
-        "    a_{11} & \\ldots & a_{1n} \\\\\r\n",
-        "    \\vdots & \\ddots & \\vdots \\\\\r\n",
-        "    a_{m1} & \\ldots & a_{mn}\r\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "A =\\begin{bmatrix}\n",
+        "    a_{11} & \\ldots & a_{1n} \\\\\n",
+        "    \\vdots & \\ddots & \\vdots \\\\\n",
+        "    a_{m1} & \\ldots & a_{mn}\n",
         "\\end{bmatrix}"
       ],
       "execution_count": null,
@@ -926,15 +941,15 @@
         "outputId": "78e50c45-c5c7-466b-fc7b-c1f3e3397c50"
       },
       "source": [
-        "# \\begin{array} の使い方。 \r\n",
-        "# array の間に ampersand `&` が入る。\r\n",
-        "# \\begin と {array} の間にスペースが入るとlatexindent で format されない。\r\n",
-        "# イコールで揃えたい時は次のようにやる。\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "\\begin{array}\r\n",
-        "    lkj;lkj & = & jk          \\\\\r\n",
-        "            & = & kj;ljk;jk;j\r\n",
+        "# \\begin{array} の使い方。 \n",
+        "# array の間に ampersand `&` が入る。\n",
+        "# \\begin と {array} の間にスペースが入るとlatexindent で format されない。\n",
+        "# イコールで揃えたい時は次のようにやる。\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\begin{array}\n",
+        "    lkj;lkj & = & jk          \\\\\n",
+        "            & = & kj;ljk;jk;j\n",
         "\\end{array}"
       ],
       "execution_count": null,
@@ -1132,15 +1147,15 @@
         "outputId": "fab53737-5e60-4c1c-8845-1998238c46c6"
       },
       "source": [
-        "# 括弧を片方だけつかってみる\r\n",
-        "%%latex\r\n",
-        "\\displaystyle\r\n",
-        "\\left\\{\r\n",
-        "\\begin{array}{lcl}\r\n",
-        "    \\sin(\\alpha \\pm \\beta) & = & \\sin \\alpha \\cos \\beta \\pm \\cos \\alpha \\sin \\beta               \\\\\r\n",
-        "    \\cos(\\alpha \\pm \\beta) & = & \\cos \\alpha \\cos \\beta \\mp \\sin \\alpha \\sin \\beta               \\\\[0.3em]\r\n",
-        "    \\tan(\\alpha \\pm \\beta) & = & \\displaystyle \\frac{\\tan \\alpha \\pm \\tan \\beta}{1 \\mp \\tan \\alpha \\tan \\beta}\r\n",
-        "\\end{array}\r\n",
+        "# 括弧を片方だけつかってみる\n",
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\\left\\{\n",
+        "\\begin{array}{lcl}\n",
+        "    \\sin(\\alpha \\pm \\beta) & = & \\sin \\alpha \\cos \\beta \\pm \\cos \\alpha \\sin \\beta               \\\\\n",
+        "    \\cos(\\alpha \\pm \\beta) & = & \\cos \\alpha \\cos \\beta \\mp \\sin \\alpha \\sin \\beta               \\\\[0.3em]\n",
+        "    \\tan(\\alpha \\pm \\beta) & = & \\displaystyle \\frac{\\tan \\alpha \\pm \\tan \\beta}{1 \\mp \\tan \\alpha \\tan \\beta}\n",
+        "\\end{array}\n",
         "\\right."
       ],
       "execution_count": null,
@@ -1520,13 +1535,13 @@
         "outputId": "2e41d040-8a66-441a-bd03-38da19ed2f4c"
       },
       "source": [
-        "%%latex\r\n",
-        "定義 1 集合 X 上の二項関係 \\rho について、次の性質を考える。\\\\\r\n",
-        "\r\n",
-        "1. すべての x \\in X について、x \\rho x が成り立つ。(反射律) \\\\\r\n",
-        "2. x, y \\in X について、x \\rho y ならば y \\rho x が成り立つ。(対称律) \\\\\r\n",
-        "3. x, y, z \\in X について、x \\rho y かつ y \\rho z ならば x \\rho z が成り立つ。(推移律) \\\\\r\n",
-        "4. x, y \\in X について、x \\rho y かつ y \\rho x ならば x = y が成り立つ。(反対称律) \\\\\r\n",
+        "%%latex\n",
+        "定義 1 集合 X 上の二項関係 \\rho について、次の性質を考える。\\\\\n",
+        "\n",
+        "1. すべての x \\in X について、x \\rho x が成り立つ。(反射律) \\\\\n",
+        "2. x, y \\in X について、x \\rho y ならば y \\rho x が成り立つ。(対称律) \\\\\n",
+        "3. x, y, z \\in X について、x \\rho y かつ y \\rho z ならば x \\rho z が成り立つ。(推移律) \\\\\n",
+        "4. x, y \\in X について、x \\rho y かつ y \\rho x ならば x = y が成り立つ。(反対称律) \\\\\n",
         "性質 \\it{1, 2, 3} を満たす二項関係を同値関係と呼び、性質 \\it{1, 3, 4} を満たす二項関係を順序関係と呼ぶ。 \\\\"
       ],
       "execution_count": null,
@@ -1556,15 +1571,15 @@
         "outputId": "14d6357b-1a17-46a4-e3e5-fe3c00ed761a"
       },
       "source": [
-        "# 数式と文がくっついて読みにくいので\\,を入れてみる\r\n",
-        "# 出力は読みやすくなるが、コードセルが読みにくくなるのでボツ\r\n",
-        "%%latex\r\n",
-        "定義\\,1\\,集合\\,X\\,上の二項関係\\,\\rho\\,について、次の性質を考える。\\\\\r\n",
-        "\r\n",
-        "1.\\,すべての\\,x\\,\\in\\,X\\,について、x\\,\\rho\\,x\\,が成り立つ。(反射律)\\,\\\\\r\n",
-        "2.\\,x,\\,y\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,ならば\\,y\\,\\rho\\,x\\,が成り立つ。(対称律)\\,\\\\\r\n",
-        "3.\\,x,\\,y,\\,z\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,かつ\\,y\\,\\rho\\,z\\,ならば\\,x\\,\\rho\\,z\\,が成り立つ。(推移律)\\,\\\\\r\n",
-        "4.\\,x,\\,y\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,かつ\\,y\\,\\rho\\,x\\,ならば\\,x\\,=\\,y\\,が成り立つ。(反対称律)\\,\\\\\r\n",
+        "# 数式と文がくっついて読みにくいので\\,を入れてみる\n",
+        "# 出力は読みやすくなるが、コードセルが読みにくくなるのでボツ\n",
+        "%%latex\n",
+        "定義\\,1\\,集合\\,X\\,上の二項関係\\,\\rho\\,について、次の性質を考える。\\\\\n",
+        "\n",
+        "1.\\,すべての\\,x\\,\\in\\,X\\,について、x\\,\\rho\\,x\\,が成り立つ。(反射律)\\,\\\\\n",
+        "2.\\,x,\\,y\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,ならば\\,y\\,\\rho\\,x\\,が成り立つ。(対称律)\\,\\\\\n",
+        "3.\\,x,\\,y,\\,z\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,かつ\\,y\\,\\rho\\,z\\,ならば\\,x\\,\\rho\\,z\\,が成り立つ。(推移律)\\,\\\\\n",
+        "4.\\,x,\\,y\\,\\in\\,X\\,について、x\\,\\rho\\,y\\,かつ\\,y\\,\\rho\\,x\\,ならば\\,x\\,=\\,y\\,が成り立つ。(反対称律)\\,\\\\\n",
         "性質\\,\\it{1,\\,2,\\,3}\\,を満たす二項関係を同値関係と呼び、性質\\,\\it{1,\\,3,\\,4}\\,を満たす二項関係を順序関係と呼ぶ。\\,\\\\"
       ],
       "execution_count": null,
