Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO73HSqssMi1PxiySAgkduz",
+      "authorship_tag": "ABX9TyOqkeZ6OYnypQHosq1qH507",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,12 +81,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3IsEdywEZ305",
-        "outputId": "771703c2-2206-41f8-d78c-d8c29a1f41a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "3IsEdywEZ305",
+        "outputId": "771703c2-2206-41f8-d78c-d8c29a1f41a6"
       },
       "source": [
         "# matplotlib.pyplot を import して plot するだけで適当な座標で描かれる\n",
@@ -156,37 +156,21 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "U5yDgaFH5g7H"
-      },
-      "source": [
-        "順序について今の考え。\n",
-        "\n",
-        "plt, fig, ax は環境なので先に書く。 それから、各種関数を描いて、最後に ax.plot とか、ax.add_patch(patch) してから、\n",
-        "\n",
-        "plt.show()   \n",
-        "とか  \n",
-        "plt.close()  \n",
-        "from IPython.display import HTML  \n",
-        "HTML(anim.to_jshtml())  \n",
-        "とかする。  "
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "a-5EnqNAob1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "5d84f57b-7aa2-4763-a9bc-a11998c93dd5"
+        "outputId": "b3544b22-fbbf-408c-9092-b6411676373d"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "fig = plt.figure () \n",
         "fig.get_size_inches()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +182,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 4
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<Figure size 432x288 with 0 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
@@ -287,7 +282,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 269
         },
-        "outputId": "7a19fa1b-7659-4d7c-ca62-53840a0f9bfc"
+        "outputId": "599f8d13-756b-47ff-f924-a9cbf31b2025"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -302,7 +297,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
