--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0/rRzq/U4Bfv6kTBo9S1b",
+      "authorship_tag": "ABX9TyNhZ550+RnpwWCKDtuol3Ma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "%%capture\n",
         "!pip install japanize_matplotlib"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
         "    , verticalalignment='center')\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -724,7 +724,8 @@
         "triangle = Polygon(((0.05,0.1), (0.396,0.1), (0.223, 0.38)), fc=\"k\")\n",
         "# rhombus = Polygon(((0.5,0.2), (0.7,0.525), (0.5,0.85), (0.3,0.525)),  fc=green)\n",
         "\n",
-        "fig = plt.figure(figsize=(6,4))\n",
+        "# fig = plt.figure(figsize=(6,4))\n",
+        "# plt.rcParams['figure.figsize'] =8,6\n",
         "ax = fig.add_subplot(aspect='equal')\n",
         "# ax = fig.add_subplot(111, facecolor='k', aspect='equal')\n",
         "# for shape in (square, circle, triangle, rhombus):\n",
