Colaboratory を使用して作成しました

--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO7UyPIktCRk5GX5m0If9w6",
+      "authorship_tag": "ABX9TyNH9ZaJpf/stmDKHoA8sneS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "hqZhTyWEhbsl"
       },
       "source": [
-        "メモ\n",
+        "# メモ\n",
         "\n",
         "matplotlib tutorials を利用した matplotlib の学習。 実験学習。 若干かけあしかも。"
       ]
@@ -293,7 +293,7 @@
         "plt.plot(data)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -755,7 +755,7 @@
         "id": "2Nrr0oeXgcG4"
       },
       "source": [
-        "# いまここ\n"
+        "# いまここ user guide \n"
       ]
     },
     {
