Colaboratory を使用して作成しました

--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlibtutorials.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP6JB3JVNf6yTDwvp7uaeFH",
+      "authorship_tag": "ABX9TyNLwgUQeQraFMS66M8bS0O7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -403,7 +403,6 @@
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
         "fig, ax = plt.subplots()  # 1つの座標axを持つfigureを作る\n",
         "ax.plot([1, 2, 3, 4], [1, 4, 2, 3])  # axにplotする"
       ],
@@ -442,30 +441,9 @@
         "id": "HBiLHCyg9qbl"
       },
       "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IupQswsMfbx2"
-      },
-      "source": [
-        "Many other plotting libraries or languages do not require you to explicitly\n",
-        "create an axes.  For example, in MATLAB, one can just do\n",
+        "MATLABを含め他のグラフ作成ライブラリーは座標を明示的に作る必要がない。\n",
         "\n",
-        ".. code-block:: matlab\n",
-        "\n",
-        "   plot([1, 2, 3, 4], [1, 4, 2, 3])  % MATLAB plot.\n",
-        "\n",
-        "and get the desired graph.\n",
-        "\n",
-        "In fact, you can do the same in Matplotlib: for each `~.axes.Axes` graphing\n",
-        "method, there is a corresponding function in the :mod:`matplotlib.pyplot`\n",
-        "module that performs that plot on the \"current\" axes, creating that axes (and\n",
-        "its parent figure) if they don't exist yet.  So the previous example can be\n",
-        "written more shortly as\n",
-        "\n"
+        "matplotlibでも、axを作る手間を省いて、次のようにすると現在(current)の座標にグラフを書くことができる。"
       ]
     },
     {
@@ -476,24 +454,25 @@
           "height": 282
         },
         "id": "rjXI8ZB3fbx2",
-        "outputId": "823b1905-102f-4c4f-9d46-6dac1fee0c6e"
+        "outputId": "da5dbf50-70ad-4e4e-af49-84eae1169da0"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
         "plt.plot([1, 2, 3, 4], [1, 4, 2, 3])  # Matplotlib plot."
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7fe54a6be1d0>]"
+              "[<matplotlib.lines.Line2D at 0x7f6e0551aa90>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 1
         },
         {
           "output_type": "display_data",
@@ -511,59 +490,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PJuf_YvUfTVV"
+      },
+      "source": [
+        "import matplotlib\n",
+        "# help(matplotlib.figure.Figure)\n",
+        "# dir(matplotlib.figure.Figure)\n",
+        "dir(matplotlib.axes.Axes)\n",
+        "# help(matplotlib.axes.Axes)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vOwMdqdFfbx3"
       },
       "source": [
         "\n",
-        "## Parts of a Figure\n",
         "\n",
-        "Now, let's have a deeper look at the components of a Matplotlib figure.\n",
+        "These are the number-line-like objects. \n",
+        "They take\n",
         "\n",
-        "<img src=\"file://../../_static/anatomy.png\">\n",
-        "\n",
-        "### :class:`~matplotlib.figure.Figure`\n",
-        "\n",
-        "The **whole** figure.  The figure keeps\n",
-        "track of all the child :class:`~matplotlib.axes.Axes`, a smattering of\n",
-        "'special' artists (titles, figure legends, etc), and the **canvas**.\n",
-        "(Don't worry too much about the canvas, it is crucial as it is the\n",
-        "object that actually does the drawing to get you your plot, but as the\n",
-        "user it is more-or-less invisible to you).  A figure can contain any\n",
-        "number of :class:`~matplotlib.axes.Axes`, but will typically have\n",
-        "at least one.\n",
-        "\n",
-        "The easiest way to create a new figure is with pyplot::\n",
-        "\n",
-        "   fig = plt.figure()  # an empty figure with no Axes\n",
-        "   fig, ax = plt.subplots()  # a figure with a single Axes\n",
-        "   fig, axs = plt.subplots(2, 2)  # a figure with a 2x2 grid of Axes\n",
-        "\n",
-        "It's convenient to create the axes together with the figure, but you can\n",
-        "also add axes later on, allowing for more complex axes layouts.\n",
-        "\n",
-        "### :class:`~matplotlib.axes.Axes`\n",
-        "\n",
-        "This is what you think of as 'a plot', it is the region of the image\n",
-        "with the data space. A given figure\n",
-        "can contain many Axes, but a given :class:`~matplotlib.axes.Axes`\n",
-        "object can only be in one :class:`~matplotlib.figure.Figure`.  The\n",
-        "Axes contains two (or three in the case of 3D)\n",
-        ":class:`~matplotlib.axis.Axis` objects (be aware of the difference\n",
-        "between **Axes** and **Axis**) which take care of the data limits (the\n",
-        "data limits can also be controlled via the :meth:`.axes.Axes.set_xlim` and\n",
-        ":meth:`.axes.Axes.set_ylim` methods).  Each :class:`~.axes.Axes` has a title\n",
-        "(set via :meth:`~matplotlib.axes.Axes.set_title`), an x-label (set via\n",
-        ":meth:`~matplotlib.axes.Axes.set_xlabel`), and a y-label set via\n",
-        ":meth:`~matplotlib.axes.Axes.set_ylabel`).\n",
-        "\n",
-        "The :class:`~.axes.Axes` class and its member functions are the primary entry\n",
-        "point to working with the OO interface.\n",
-        "\n",
-        "### :class:`~matplotlib.axis.Axis`\n",
-        "\n",
-        "These are the number-line-like objects. They take\n",
         "care of setting the graph limits and generating the ticks (the marks\n",
         "on the axis) and ticklabels (strings labeling the ticks).  The location of\n",
         "the ticks is determined by a `~matplotlib.ticker.Locator` object and the\n",
